<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_by_alpha_white_48dp"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom" />

    <!-- Polozky vzdy schovane - never -->
    <item android:id="@+id/action_show_all_tasks"
        android:title="@string/action_show_all_tasks"
        app:showAsAction="never" />

    <item android:id="@+id/action_hide_completed"
        android:title="@string/action_hide_completed"
        app:showAsAction="never" />

    <item android:id="@+id/action_task_places_map"
        android:title="@string/action_task_places_map"
        app:showAsAction="never" />
    <!--
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    -->
</menu>