<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/gallery_thumb">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:columnCount="2"
        android:rowCount="5">

        <TextView
            android:id="@+id/tvTaskDueDateLabel"
            android:text="@string/tv_due_date_label"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginStart="20dp"
            android:minWidth="120dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/tvTaskDueDate"
            android:layout_row="0"
            android:layout_column="1"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/tvPlaceLabel"
            android:text="@string/tv_place_label"
            android:layout_row="1"
            android:layout_column="0"
            android:minWidth="120dp"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/tvTaskPlace"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tvTaskListLabel"
            android:text="@string/tv_task_list_label"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minWidth="120dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvAssignedTaskList"
            android:layout_row="2"
            android:layout_column="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvTaskCompletedLabel"
            android:text="@string/tv_task_completed_label"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:minWidth="120dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/chbTaskCompleted"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_row="3"
            android:layout_column="1" />

    </GridLayout>

</LinearLayout>