<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tlbEditTaskListActivity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:useDefaultMargins="true"
            android:alignmentMode="alignBounds"
            android:columnOrderPreserved="false"
            android:columnCount="2"
            android:rowCount="10">

            <!-- Focusable pro zabraneni ziskani focusu etTaskName a zobrazeni klavesnice -->
            <TextView
                android:id="@+id/tvTaskNameLabel"
                android:text="@string/tv_task_name_label"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|center_vertical" />

            <EditText
                android:id="@+id/etTaskName"
                android:nextFocusUp="@id/etTaskName"
                android:nextFocusLeft="@id/etTaskName"
                android:inputType="textShortMessage"
                android:layout_row="0"
                android:layout_column="1"
                android:ems="13"
                android:layout_gravity="center_horizontal|center_vertical"/>

            <TextView
                android:id="@+id/tvTaskDueDateLabel"
                android:text="@string/tv_due_date_label"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|center_vertical" />

            <EditText
                android:id="@+id/etTaskDueDate"
                android:inputType="date"
                android:layout_row="1"
                android:layout_column="1"
                android:ems="13"
                android:layout_gravity="center_horizontal|center_vertical"
                android:focusable="false" />

            <TextView
                android:id="@+id/tvNotificationDateLabel"
                android:text="@string/tv_notification_date_label"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|center_vertical" />

            <GridLayout
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:useDefaultMargins="true"
                android:alignmentMode="alignBounds"
                android:columnOrderPreserved="false"
                android:columnCount="3"
                android:rowCount="1">

                <EditText
                    android:id="@+id/etNotificationDate"
                    android:layout_column="0"
                    android:inputType="date"
                    android:ems="5"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:focusable="false" />

                <TextView
                    android:id="@+id/tvNotificationDateIn"
                    android:layout_column="1"
                    android:ems="1"
                    android:text="v"
                    android:layout_gravity="center_horizontal|center_vertical" />

                <EditText
                    android:id="@+id/etNotificationTime"
                    android:layout_column="2"
                    android:inputType="time"
                    android:ems="3"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:focusable="false" />
            </GridLayout>

            <TextView
                android:id="@+id/tvPlaceLabel"
                android:text="@string/tv_place_label"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|center_vertical" />

            <GridLayout
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="center_horizontal|center_vertical"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:useDefaultMargins="true"
                android:alignmentMode="alignBounds"
                android:columnOrderPreserved="false"
                android:columnCount="3"
                android:rowCount="1">

                <EditText
                    android:id="@+id/etTaskPlace"
                    android:inputType="textShortMessage"
                    android:ems="8"
                    android:layout_gravity="start"
                    android:focusable="false" />

                <ImageButton
                    android:id="@+id/imgbtnCurrentPlace"
                    android:src="@drawable/ic_mic_black_24dp"
                    android:drawablePadding="0dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_circle_backgroud" />

                <ImageButton
                    android:id="@+id/imgbtnChooseTaskPlace"
                    android:src="@drawable/ic_mic_black_24dp"
                    android:drawablePadding="0dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_circle_backgroud" />
            </GridLayout>

            <TextView
                android:id="@+id/tvRadiusLabel"
                android:text="@string/tv_radius_label"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|center_vertical" />

            <GridLayout
                android:layout_row="4"
                android:layout_column="1"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:useDefaultMargins="true"
                android:alignmentMode="alignBounds"
                android:columnOrderPreserved="false"
                android:columnCount="2"
                android:rowCount="1">

                <TextView
                    android:id="@+id/tvRadius"
                    android:text="@string/tv_radius"
                    android:layout_width="45dp" />

                <SeekBar
                    android:id="@+id/sbRadius"
                    android:layout_width="230dp" />
            </GridLayout>

            <TextView
                android:id="@+id/tvSetGeofenceLabel"
                android:text="@string/tv_set_geofence_label"
                android:layout_row="5"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|center_vertical" />

            <CheckBox
                android:id="@+id/chbSetGeofence"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_row="5"
                android:layout_column="1" />

            <TextView
                android:id="@+id/tvTaskDescriptionLabel"
                android:text="@string/tv_task_description_label"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|center_vertical" />

            <EditText
                android:id="@+id/etTaskDescription"
                android:inputType="textMultiLine"
                android:layout_row="6"
                android:layout_column="1"
                android:ems="13" />

            <TextView
                android:id="@+id/tvTaskListLabel"
                android:text="@string/tv_task_list_label"
                android:layout_row="7"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|center_vertical" />

            <Spinner
                android:id="@+id/spinTaskLists"
                android:prompt="@string/tv_task_completed_label"
                android:layout_row="7"
                android:layout_column="1" />

            <TextView
                android:id="@+id/tvRecordingLabel"
                android:text="@string/tv_recording_label"
                android:layout_row="8"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|center_vertical" />

            <GridLayout
                android:layout_row="8"
                android:layout_column="1"
                android:layout_gravity="center_horizontal|center_vertical"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:useDefaultMargins="true"
                android:alignmentMode="alignBounds"
                android:columnOrderPreserved="false"
                android:columnCount="2"
                android:rowCount="1">

                <ToggleButton
                    android:id="@+id/btnRecordTask"
                    android:textOn="STOP"
                    android:textOff="START"
                    android:drawableStart="@drawable/ic_mic_black_24dp"
                    android:drawablePadding="4dp" />

                <ToggleButton
                    android:id="@+id/btnPlayTask"
                    android:textOn="STOP"
                    android:textOff="START"
                    android:drawableStart="@drawable/ic_play_arrow_black_24dp"
                    android:drawablePadding="4dp" />
            </GridLayout>

            <ImageButton
                android:id="@+id/imgbtnTakePhoto"
                android:src="@drawable/ic_photo_camera_black_24dp"
                android:drawablePadding="4dp"
                android:layout_row="9"
                android:layout_column="0"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_circle_backgroud" />

            <ImageView
                android:id="@+id/ivTaskPhoto"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_row="9"
                android:layout_column="1"
                android:layout_gravity="center_horizontal" />
        </GridLayout>
    </ScrollView>
</LinearLayout>

